Use market data provider in analytics