@@ -2,18 +2,15 @@ package com.investnavigator.backend.analytics.service;
 
 import com.investnavigator.backend.analytics.dto.AnalyticsSummaryResponse;
 import com.investnavigator.backend.analytics.model.RiskLevel;
-import com.investnavigator.backend.asset.model.Asset;
-import com.investnavigator.backend.asset.repository.AssetRepository;
-import com.investnavigator.backend.marketdata.model.Candle;
-import com.investnavigator.backend.marketdata.model.MarketPrice;
+import com.investnavigator.backend.common.error.BadRequestException;
+import com.investnavigator.backend.common.error.ResourceNotFoundException;
+import com.investnavigator.backend.marketdata.dto.CandleResponse;
+import com.investnavigator.backend.marketdata.dto.MarketPriceResponse;
 import com.investnavigator.backend.marketdata.model.Timeframe;
-import com.investnavigator.backend.marketdata.repository.CandleRepository;
-import com.investnavigator.backend.marketdata.repository.MarketPriceRepository;
+import com.investnavigator.backend.marketdata.service.MarketDataService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import com.investnavigator.backend.common.error.ResourceNotFoundException;
-import com.investnavigator.backend.common.error.BadRequestException;
 
 import java.math.BigDecimal;
 import java.math.RoundingMode;
@@ -27,43 +24,43 @@ public class AnalyticsService {
 
     private static final int SCALE = 6;
 
-    private final AssetRepository assetRepository;
-    private final MarketPriceRepository marketPriceRepository;
-    private final CandleRepository candleRepository;
+    private final MarketDataService marketDataService;
 
     public AnalyticsSummaryResponse getSummary(String ticker) {
-        Asset asset = assetRepository.findByTickerIgnoreCase(ticker)
-                .orElseThrow(() -> new ResourceNotFoundException("Asset not found: " + ticker));
+        MarketPriceResponse currentMarketPrice = marketDataService.getLatestMarketPrice(ticker);
 
-        MarketPrice currentMarketPrice = marketPriceRepository.findTopByAssetOrderByTimestampDesc(asset)
-                .orElseThrow(() -> new ResourceNotFoundException("Market price not found for asset: " + ticker));
-
-        List<Candle> candles = candleRepository
-                .findTop30ByAssetAndTimeframeOrderByTimestampDesc(asset, Timeframe.ONE_DAY)
+        List<CandleResponse> candles = marketDataService.getCandles(ticker, Timeframe.ONE_DAY)
                 .stream()
-                .sorted(Comparator.comparing(Candle::getTimestamp))
+                .sorted(Comparator.comparing(CandleResponse::timestamp))
                 .toList();
 
         if (candles.isEmpty()) {
             throw new ResourceNotFoundException("Candles not found for asset: " + ticker);
         }
 
-        BigDecimal firstClose = candles.getFirst().getClose();
-        BigDecimal lastClose = candles.getLast().getClose();
+        BigDecimal firstClose = candles.get(0).close();
+        BigDecimal lastClose = candles.get(candles.size() - 1).close();
 
-        BigDecimal priceChange = lastClose.subtract(firstClose).setScale(SCALE, RoundingMode.HALF_UP);
+        BigDecimal priceChange = lastClose
+                .subtract(firstClose)
+                .setScale(SCALE, RoundingMode.HALF_UP);
+
         BigDecimal priceChangePercent = calculatePercentChange(firstClose, lastClose);
-
         BigDecimal averageVolume = calculateAverageVolume(candles);
         BigDecimal volatilityPercent = calculateVolatilityPercent(candles);
 
-        int riskScore = calculateRiskScore(volatilityPercent, priceChangePercent, candles.size());
+        int riskScore = calculateRiskScore(
+                volatilityPercent,
+                priceChangePercent,
+                candles.size()
+        );
+
         RiskLevel riskLevel = defineRiskLevel(riskScore);
 
         return new AnalyticsSummaryResponse(
-                asset.getTicker(),
-                asset.getName(),
-                currentMarketPrice.getPrice(),
+                currentMarketPrice.ticker(),
+                currentMarketPrice.name(),
+                currentMarketPrice.price(),
                 firstClose,
                 lastClose,
                 priceChange,
@@ -74,6 +71,30 @@ public class AnalyticsService {
                 riskLevel,
                 candles.size()
         );
+    }
+
+    public List<AnalyticsSummaryResponse> compareAssets(List<String> tickers) {
+        if (tickers == null) {
+            throw new BadRequestException("Tickers list is required");
+        }
+
+        List<String> normalizedTickers = tickers.stream()
+                .filter(ticker -> ticker != null && !ticker.isBlank())
+                .map(ticker -> ticker.trim().toUpperCase())
+                .distinct()
+                .toList();
+
+        if (normalizedTickers.size() < 2) {
+            throw new BadRequestException("You must compare at least 2 different assets");
+        }
+
+        if (normalizedTickers.size() > 5) {
+            throw new BadRequestException("You can compare no more than 5 assets");
+        }
+
+        return normalizedTickers.stream()
+                .map(this::getSummary)
+                .toList();
     }
 
     private BigDecimal calculatePercentChange(BigDecimal firstClose, BigDecimal lastClose) {
@@ -88,9 +109,9 @@ public class AnalyticsService {
                 .setScale(SCALE, RoundingMode.HALF_UP);
     }
 
-    private BigDecimal calculateAverageVolume(List<Candle> candles) {
+    private BigDecimal calculateAverageVolume(List<CandleResponse> candles) {
         BigDecimal totalVolume = candles.stream()
-                .map(Candle::getVolume)
+                .map(CandleResponse::volume)
                 .reduce(BigDecimal.ZERO, BigDecimal::add);
 
         return totalVolume.divide(
@@ -100,7 +121,7 @@ public class AnalyticsService {
         );
     }
 
-    private BigDecimal calculateVolatilityPercent(List<Candle> candles) {
+    private BigDecimal calculateVolatilityPercent(List<CandleResponse> candles) {
         if (candles.size() < 2) {
             return BigDecimal.ZERO.setScale(SCALE, RoundingMode.HALF_UP);
         }
@@ -124,11 +145,11 @@ public class AnalyticsService {
                 .setScale(SCALE, RoundingMode.HALF_UP);
     }
 
-    private List<BigDecimal> calculateDailyReturns(List<Candle> candles) {
+    private List<BigDecimal> calculateDailyReturns(List<CandleResponse> candles) {
         return java.util.stream.IntStream.range(1, candles.size())
                 .mapToObj(index -> {
-                    BigDecimal previousClose = candles.get(index - 1).getClose();
-                    BigDecimal currentClose = candles.get(index).getClose();
+                    BigDecimal previousClose = candles.get(index - 1).close();
+                    BigDecimal currentClose = candles.get(index).close();
 
                     if (previousClose.compareTo(BigDecimal.ZERO) == 0) {
                         return BigDecimal.ZERO;
@@ -141,10 +162,16 @@ public class AnalyticsService {
                 .toList();
     }
 
-    private int calculateRiskScore(BigDecimal volatilityPercent, BigDecimal priceChangePercent, int dataPoints) {
+    private int calculateRiskScore(
+            BigDecimal volatilityPercent,
+            BigDecimal priceChangePercent,
+            int dataPoints
+    ) {
         int score = 0;
 
-        score += volatilityPercent.multiply(BigDecimal.valueOf(10)).intValue();
+        score += volatilityPercent
+                .multiply(BigDecimal.valueOf(10))
+                .intValue();
 
         BigDecimal absolutePriceChange = priceChangePercent.abs();
 
@@ -177,25 +204,5 @@ public class AnalyticsService {
         }
 
         return RiskLevel.LOW;
-    }
-
-    public List<AnalyticsSummaryResponse> compareAssets(List<String> tickers) {
-        List<String> normalizedTickers = tickers.stream()
-                .filter(ticker -> ticker != null && !ticker.isBlank())
-                .map(ticker -> ticker.trim().toUpperCase())
-                .distinct()
-                .toList();
-
-        if (normalizedTickers.size() < 2) {
-            throw new BadRequestException("You must compare at least 2 different assets");
-        }
-
-        if (normalizedTickers.size() > 5) {
-            throw new BadRequestException("You can compare no more than 5 assets");
-        }
-
-        return normalizedTickers.stream()
-                .map(this::getSummary)
-                .toList();
     }
 }
